# minotari-cli

./: .env  .gitignore  BALANCE_ERROR_MESSAGE_FIX.md  BALANCE_PASSWORD_FIX.md  BALANCE_VALIDATION_IMPROVEMENTS.md  CUCUMBER_TESTS_FIX.md  Cargo.toml  DAEMON_TESTS_IMPLEMENTATION.md  EXACT_BALANCE_TESTING.md  FUND_LOCKING_IMPLEMENTATION.md  INTEGRATION_TESTS_FIX.md  MERGE_SUMMARY.md  MIGRATION_MERGE_SUMMARY.md  Makefile  README.md  REAL_BLOCKCHAIN_DATA_IMPLEMENTATION.md  REMOVE_CLEAN_ENV_STEP.md  TRANSACTION_IMPLEMENTATION.md  WORKSPACE_MIGRATION.md  lints.toml  openapi.json  rerun_migrations.ps1  rustfmt.toml  tapplet-design.md  test.db  webhooks.md
.cargo/: config.toml
.sqlx/: query-03dd1b330fd10719df47b651e3ffc9a3e713e96c3e3eb421daf6851fa6e38e45.json  query-04d91f3ba63ec681e8e19a7107d071dda28abe1c9bb81a1c5f33700878f59b48.json  query-05f723024bf2fcfa08d87ea6fe0df8a92239c0675ed492bdf5635cd9e9277b13.json  query-0925383c1458245ffaa4f23e5e6e3dd8bd213631635b24ac7df9347f6ee8fe5e.json  query-0baed82706c7e8132f2d21134cd502bc056878406e8ba68c425be575536bafeb.json  query-0c98543a19c38bb518f8f0d4188f21ad3e6494572c65346a42ab04d2fa487af9.json  query-12298df9bc609f2915d910933a784f78fe75244ca40731d437686f28429429c1.json  query-140b450e9846be7c9707ec966f8e9a18b856fcecda7c7354090cf6b91518feae.json  query-1da3d4dadadd3b82629eadb3b6f756b4f3724521ef076b67e77478726c73e830.json  query-1da45d55d7bc361a465d0f079516b1765a1f1688c868978805c6543ce58e4193.json  query-2597d1a1ca90a04ba2f02b30b1fac690f469fd371dca093995e5abe0e560cc48.json  query-2c9a2446f1caf626eb39d064f3bbdb9a492f67ca23c6dee46929d16a23bb2b41.json  query-2e96dbd3d42870c96b9992ca35aac5d8f72c756727bca9d0a2a79f54c661414d.json  query-2f4827c6947716caf10dddcdee91d6a4650895df212ccd846e2e4a214030bebe.json  query-323457ba60d224b15fcc32e425c1f5473d3b21f9b735433b13fc06f8f75f209d.json  query-33b379e6a6555686ba1d0a334981a1148ee6c41699e96afb70eafc3c9cfeeef8.json  query-3bacaffc3878c653d568e3e48392930c6ebef3b5d281404dbf1501785bbe6240.json  query-44b634973db5f81e30244a83bfcec67ff024ec0040facf0aa24eab2f0537c5fc.json  query-4590b3790d59c84f42818c9c6c3163988b8cef660e4a19e77d140f5178fe6fc0.json  query-484fed6d230d46fc4f44cea69039c2da6c8fd8a65b7d803b07529fec414d8f5c.json  (+51 more)
config/: config.toml
integration-tests/: BASE_NODE_INTEGRATION.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  test_password_minimum_32_chars_long_for_encryption
integration-tests/config/: config.toml
integration-tests/features/: balance.feature  balance_with_mining.feature  base_node.feature  burn.feature  daemon.feature  end_to_end.feature  fast_sync.feature  fund_locking.feature  load_testing.feature  mining.feature  payref_history.feature  scanning.feature  transactions.feature  wallet_benchmark.feature  wallet_creation.feature  wallet_import.feature
integration-tests/src/: base_node_process.rs  lib.rs
integration-tests/steps/: balance.rs  base_node.rs  burn.rs  common.rs  daemon.rs  fast_sync.rs  fund_locking.rs  load_testing.rs  mod.rs  payref_history.rs  scanning.rs  transactions.rs  transactions_old.rs  wallet_benchmark.rs  wallet_creation.rs  wallet_import.rs
integration-tests/tests/: cucumber.rs
minotari/: Cargo.toml
minotari/config/: config.toml
minotari/docs/db/: db_schema.sql
minotari/migrations/00002-add_outputs/: up.sql
minotari/migrations/00008-add_unique_constraints/: up.sql
minotari/migrations/00010-create_pending_transactions/: up.sql
minotari/migrations/00011-modify_pending_transactions/: up.sql
minotari/migrations/00015-create_completed_transactions/: up.sql
minotari/migrations/00017-make_outputs_deterministic/: up.sql
minotari/migrations/00019-optimize_balance_lookups/: up.sql
minotari/migrations/00020-unified_wallet_type/: up.sql
minotari/migrations/00021-add_payment_reference_to_outputs/: up.sql
minotari/migrations/00022-add_payref_to_displayed_transactions/: up.sql
minotari/migrations/00023-create_completed_transactions_id_field_change/: up.sql
minotari/migrations/00024-revert_outputs_id_and_add_tx_id/: up.sql
minotari/migrations/00026-create_webhook_queue/: up.sql
minotari/migrations/00028-create_burn_proofs/: up.sql
minotari/migrations/00029-add_is_burn_to_outputs/: up.sql
minotari/migrations/00030-create_payref_history/: up.sql
minotari/openapi/: main.rs
minotari/src/: cli.rs  daemon.rs  lib.rs  main.rs  wallet_db_extensions.rs
minotari/src/api/: accounts.rs  error.rs  mod.rs  types.rs
minotari/src/api/accounts/: balance.rs  burn.rs  events.rs  fees.rs  fund_lock.rs  mod.rs  params.rs  transactions.rs
minotari/src/commands/: burn.rs  migrate_console_wallet.rs  mod.rs  validator_nodes.rs
minotari/src/config/: defaults.rs  loader.rs
minotari/src/db/: accounts.rs  balance_changes.rs  burn_proofs.rs  completed_transactions.rs  displayed_transactions.rs  error.rs  events.rs  inputs.rs  mod.rs  outputs.rs  payref_history.rs  pending_transactions.rs  scanned_tip_blocks.rs  webhooks.rs
minotari/src/http/: http_client.rs  mod.rs  types.rs  wallet_http_client.rs
minotari/src/log/: mod.rs
minotari/src/migrate/: console_db.rs  migrator.rs  mod.rs  output_converter.rs  output_driven_migrator.rs  test_fixture.rs  tests.rs  tx_converter.rs
minotari/src/models/: output_status.rs  pending_transactions_status.rs
minotari/src/scan/: block_event_accumulator.rs  block_processor.rs  builder.rs  config.rs  coordinator.rs  events.rs  mod.rs  reorg.rs  scan.rs  scan_db_handler.rs  scanner_state_manager.rs  types.rs
minotari/src/tasks/: burn_proof_worker.rs  mod.rs
minotari/src/transactions/: fee_estimator.rs  fund_locker.rs  input_selector.rs  manager.rs  mod.rs  monitor.rs  one_sided_transaction.rs  transaction_history.rs
minotari/src/transactions/burn/: mod.rs
minotari/src/transactions/displayed_transaction_processor/: builder.rs  processor.rs  types.rs
minotari/src/transactions/validator_node/: common.rs  eviction.rs  exit.rs  mod.rs  registration.rs
minotari/src/utils/: crypto.rs  delete_wallet.rs  init_wallet.rs  mod.rs
minotari/src/webhooks/: mod.rs  sender.rs  utils.rs  worker.rs
src/: cli.rs  (+7 more)
(+137 files in other folders)
