[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[test]]
name = "cucumber"
harness = false

[dependencies]

# Cucumber BDD framework
cucumber = "0.21"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Utilities
indexmap = "1.9"

# Tari dependencies for base node integration
minotari_app_utilities = { git = "https://github.com/tari-project/tari/"  }
minotari_app_grpc = { git = "https://github.com/tari-project/tari/"}
minotari_node = { git = "https://github.com/tari-project/tari/" , features = ["metrics"] }
minotari_node_grpc_client = {git = "https://github.com/tari-project/tari/" }
tari_common = { git = "https://github.com/tari-project/tari/" }
tari_common_sqlite = { git = "https://github.com/tari-project/tari/" }
tari_common_types = { git = "https://github.com/tari-project/tari/" }
tari_comms = { git = "https://github.com/tari-project/tari/" }
tari_comms_dht = { git = "https://github.com/tari-project/tari/"}
tari_p2p = {  git = "https://github.com/tari-project/tari/"}
tari_shutdown = { git = "https://github.com/tari-project/tari/" }


# Other dependencies
rand = "0.8"
tonic = "0.13"
anyhow = "1.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tari_utilities = { version = "0.8", features = ["std"] }
tari_transaction_components = { git = "https://github.com/tari-project/tari/" }
tempfile = "3.15"
serial_test = "3.2"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }