[package]
name = "minotari"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
default-run = "minotari"

[[bin]]
name = "minotari"
path = "src/main.rs"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate_openapi.rs"

[dependencies]
anyhow = "1.0.99"
argon2 = { version = "0.5.3", features = ["std", "alloc"] }
axum = { version = "0.8.6", features = ["default", "http2", "macros"] }
chacha20poly1305 = { version = "0.10.1", features = ["rand_core", "std"] }
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
hex = "0.4.3"
hmac = "0.12.1"
include_dir = "0.7.4"
minotari-scanning = { workspace = true, features = [
    "grpc",
    "http",
] }
log = { version = "0.4.29", features = ["kv"] }
log4rs = { version = "1.4.0", features = ["yaml_format", "console_appender", "file_appender", "log_kv"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
rusqlite = { version = "0.37", features = ["bundled", "chrono", "uuid", "serde_json"] }
rusqlite_migration = { version = "2.3.0", features = ["from-directory"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_rusqlite = "0.40.1"
serde_yaml = "0.9.34"
sha2 = "0.10"
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_crypto = { version = "0.22.1", features = ["borsh"] }
tari_script = { workspace = true }
tari_transaction_components = { workspace = true }
tari_utilities = { version = "0.8", features = ["std"] }
#tari_common = { path = "../tari/common" }
#tari_common_types = { path = "../tari/base_layer/common_types" }
#tari_script = { path = "../tari/infrastructure/tari_script" }
#tari_transaction_components = { path = "../tari/base_layer/transaction_components" }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
url = "2.5"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# For openapi tests only
tempfile = "3.24.0"
tokio = { version = "1.47.1", features = ["full", "test-util"] }
wiremock = "0.6.5"
